Show basket only if it has items else show offers

--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
                             Basket <span class="badge basket"></span>
                         </button>
                 </div>
-                <h1>iyabasira <span class="grey">bring ma food nah!</span></h1>
+                <h3>iyabasira <span class="grey">delivery</span></h3>
                 <!-- Search box -->
                 <div class="search-box">
                     <input class="form-control" id="search_text" name="search_text" type="text" placeholder="Enter your search">
