--- a/index.html
+++ b/index.html
@@ -36,15 +36,15 @@
     <div class="container">
         <div class="row">
             <div class="main">
-                <div class="pull-right">
-                    <button class="btn btn-primary" type="button">
+                <div class="pull-right dashboard">
+                    <button class="btn btn-primary hidden" type="button">
                             Offers <span class="badge offers"></span>
                         </button>
-                    <button class="btn btn-danger" type="button">
+                    <button class="btn btn-danger hidden" type="button">
                             Basket <span class="badge basket"></span>
                         </button>
                 </div>
-                <h3>iyabasira <span class="grey">delivery</span></h3>
+                <h3 class="app-title">iyabasira <span class="grey">delivery</span></h3>
                 <!-- Search box -->
                 <div class="search-box">
                     <input class="form-control" id="search_text" name="search_text" type="text" placeholder="Enter your search">
