--- a/index.html
+++ b/index.html
@@ -37,11 +37,9 @@
         <div class="row">
             <div class="main">
                 <div class="pull-right dashboard">
-                    <button class="btn btn-primary hidden" type="button">
-                            Offers <span class="badge offers"></span>
+                    <button class="btn btn-primary hidden" type="button">Offers <span class="badge offers"></span>
                         </button>
-                    <button class="btn btn-danger hidden" type="button">
-                            Basket <span class="badge basket"></span>
+                    <button class="btn btn-danger hidden" type="button">Basket <span class="badge basket"></span>
                         </button>
                 </div>
                 <h3 class="app-title">iyabasira <span class="grey">delivery</span></h3>
