--- a/index.html
+++ b/index.html
@@ -18,6 +18,12 @@
     <meta name="apple-mobile-web-app-capable" content="yes">
     <!-- Custom styles for this template -->
     <link href="/css/global.min.css" rel="stylesheet">
+    <script type="text/javascript"> //<![CDATA[ 
+        var tlJsHost = ((window.location.protocol == "https:") ? "https://secure.comodo.com/" : "http://www.trustlogo.com/");
+        document.write(unescape("%3Cscript src='" + tlJsHost + "trustlogo/javascript/trustlogo.js' type='text/javascript'%3E%3C/script%3E"));
+        //]]>
+    </script>
+
     <style>
         .alert,
         .order-form,
@@ -37,11 +43,9 @@
         <div class="row">
             <div class="main">
                 <div class="pull-right dashboard">
-                    <button class="btn btn-primary hidden" type="button">
-                            Offers <span class="badge offers"></span>
+                    <button class="btn btn-primary hidden" type="button">Offers <span class="badge offers"></span>
                         </button>
-                    <button class="btn btn-danger hidden" type="button">
-                            Basket <span class="badge basket"></span>
+                    <button class="btn btn-danger hidden" type="button">Basket <span class="badge basket"></span>
                         </button>
                 </div>
                 <h3 class="app-title">iyabasira <span class="grey">delivery</span></h3>
@@ -154,5 +158,8 @@
 
     </script>
 </body>
-
+<script language="JavaScript" type="text/javascript">
+TrustLogo("http://iyabasira.online/img/comodo_secure_seal_76x26_transp.png", "CL1", "none");
+</script>
+<a  href="https://www.positivessl.com/" id="comodoTL">Positive SSL</a>
 </html>
