Add favicon and beutify code

--- a/index.html
+++ b/index.html
@@ -41,8 +41,9 @@
                 </div>
                 <h3 class="app-title">iyabasira <span class="grey">delivery</span></h3>
                 <!-- Search box -->
-                <div class="search-box">
-                    <input class="form-control" id="search_text" name="search_text" type="text" placeholder="Enter your search">
+                <div class="search-box input-group input-group-lg" >
+                    <input class="form-control" id="search_text" name="search_text" type="text" placeholder="Enter your search" aria-describedby="sizing-addon1">
+                    <span class="input-group-addon" id="sizing-addon1"><span class='glyphicon glyphicon-search'></span></span>
                 </div>
                 <!-- The table area -->
                 <div class="alert alert-info alert-dismissible" role="alert">
@@ -141,7 +142,7 @@
 
         $("#basket_button").bind("click", function(e) {
            e.preventDefault();
-           $("body").load("/checkout")
+           $("body").load("/basket")
         });
 
         $("#close").bind("click", function(e) {
