Give search funcionality to search icon

--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
                 <!-- Search box -->
                 <div class="search-box input-group input-group-lg" >
                     <input class="form-control" id="search_text" name="search_text" type="text" placeholder="Enter your search" aria-describedby="sizing-addon1">
-                    <span class="input-group-addon" id="sizing-addon1"><span class='glyphicon glyphicon-search'></span></span>
+                    <span class="input-group-addon" id="sizing-addon1"><a href="JavaScript:void(0)" onclick="load_products()"><span class='glyphicon glyphicon-search'></span></a></span>
                 </div>
                 <!-- The table area -->
                 <div class="alert alert-info alert-dismissible" role="alert">
