--- a/index.html
+++ b/index.html
@@ -36,9 +36,7 @@
         <div class="row">
             <div class="main">
                 <div class="pull-right dashboard">
-                    <button class="btn btn-primary hidden" type="button">Offers <span class="badge offers"></span>
-                        </button>
-                    <button class="btn btn-danger hidden" id="basket_button" type="button">Basket <span class="badge basket"></span>
+                    <button class="btn btn-danger hidden" id="basket_button" type="button">Basket <span class="badge basket">0.00</span>
                         </button>
                 </div>
                 <h3 class="app-title">iyabasira <span class="grey">delivery</span></h3>
@@ -60,20 +58,19 @@
                     <form class="form-horizontal" id="order-form">
                         <input type="hidden" id="token">
                         <input type="hidden" id="product_id">
+
                         <!-- Quantity -->
-                        <div class="form-group col-xs-12">
-                            <div class="col-xs-6">
-                                <label class="control-label quantity-label" for="quantity">Quantity:</label>
+                        <div class="form-group">
+                            <label class="control-label col-xs-5" for="quantity">Quantity:</label>
+                            <div class="col-xs-5">
+                                <input class="form-control quantity" id="quantity" name="quantity" type="number" min="1" max="99" value="1">
                             </div>
-                            <div class="col-xs-6">
-                                <strong><output id="quantityValue">1</output></strong>
-                            </div>  
-                            <div class="col-xs-12">
-                                <input class="form-control" id="quantity" name="quantity" type="range" min="1" max="10" value="1" onchange="updateRangeValue(this.value);">
-                            </div>
+                        </div>
+
+                        <div class="form-group">
                             <div class="col-xs-6">
                                 <input type="button" class="btn btn-success btn-lg" id="add-product" value="Order">
-                            </div>
+                            </div>  
                             <div class="col-xs-6">
                                 <input type="button" class="btn btn-default btn-lg" id="close" value="Exit">
                             </div>
@@ -115,11 +112,11 @@
             load_products();
         });
 
-        $(".glyphicon-refresh").bind("click", function() {
+        $(".glyphicon-refresh").parent().bind("click", function() {
             load_products();
         });
 
-        $(".glyphicon-fullscreen").bind("click", function() {
+        $(".glyphicon-fullscreen").parent().bind("click", function() {
             toggleFullScreen();
         });
 
