--- a/index.html
+++ b/index.html
@@ -33,65 +33,15 @@
     <i class="fa fa-refresh fa-5x fa-spin"></i>
     <div class="shadow"></div>
     <div class="container">
-        <div class="row">
-            <div class="main">
-                <div class="pull-right dashboard">
-                    <button class="btn btn-danger hidden" id="basket_button" type="button">Basket <span class="badge basket">0.00</span>
-                        </button>
-                </div>
-                <h3 class="app-title">iyabasira <span class="grey">delivery</span></h3>
-                <!-- Search box -->
-                <div class="search-box input-group input-group-lg" >
-                    <input class="form-control" id="search_text" name="search_text" type="text" placeholder="Enter your search" aria-describedby="sizing-addon1">
-                    <span class="input-group-addon" id="sizing-addon1"><a href="JavaScript:void(0)" onclick="load_products()"><span class='glyphicon glyphicon-search'></span></a></span>
-                </div>
-                <!-- The table area -->
-                <div class="alert alert-info alert-dismissible" role="alert">
-                    <button type="button" class="close" data-dismiss="alert" aria-label="Close">
-                    <span aria-hidden="true">&times;</span>
-                </button>
-                    <span id="msg"></span>
-                </div>
-                <div class="table-responsive" id="dashboard-table">
-                    <!-- List of products -->
-                </div>
-                <div class="order-form">
-                    <form class="form-horizontal" id="order-form">
-                        <input type="hidden" id="token">
-                        <input type="hidden" id="product_id">
-
-                        <!-- Quantity -->
-                        <div class="form-group">
-                            <label class="control-label col-xs-5" for="quantity">Quantity:</label>
-                            <div class="col-xs-5">
-                                <input class="form-control quantity" id="quantity" name="quantity" type="number" min="1" max="99" value="1">
-                            </div>
-                        </div>
-
-                        <div class="form-group">
-                            <div class="col-xs-6">
-                                <input type="button" class="btn btn-success btn-lg" id="add-product" value="Order">
-                            </div>  
-                            <div class="col-xs-6">
-                                <input type="button" class="btn btn-default btn-lg" id="close" value="Exit">
-                            </div>
-                        </div>
-                    </form>
-                    <div class="error_message "></div>
-                </div>
-            </div>
-
+        <div class="content">
         </div>
-
+        
     </div>
 
     <footer class="navbar navbar-fixed-bottom">
         <ul class="nav navbar-nav">
             <li class="active">
                 <a href="javascript:void(0)"><span class="glyphicon glyphicon-home" data-toggle="tooltip" data-placement="top" title="Home"></span></a>
-            </li>
-            <li>
-                <a href="javascript:void(0)"><span class="glyphicon glyphicon-refresh" data-toggle="tooltip" data-placement="top"  title="Refresh tickets list"></span></a>
             </li>
             <li>
                 <a href="javascript:void(0)"><span class="glyphicon glyphicon glyphicon-fullscreen" data-toggle="tooltip" data-placement="top" title="Toggle full screen"></span></a>
@@ -108,49 +58,16 @@
 
     <script>
         $(document).ready(function() {
-            //$('[data-toggle="tooltip"]').tooltip();
-            $(".alert").hide();
-            load_products();
+            $(".content").load(HOME);
         });
 
-        $(".glyphicon-refresh").parent().bind("click", function() {
-            load_products();
+        $(".glyphicon-home").parent().bind("click", function() {
+            $(".content").load(HOME);
         });
 
         $(".glyphicon-fullscreen").parent().bind("click", function() {
             toggleFullScreen();
         });
-
-        $("#search_text").bind("keypress", function(a) {
-            if (a.keyCode == 13)
-                load_products();
-        });
-
-        $('.alert .close').on('click', function(e) {
-            e.preventDefault();
-            $(this).parent().hide();
-        });
-
-        updateRangeValue = function(value) {
-            $("#quantityValue").html(value);
-        };
-
-        $("#add-product").bind("click", function(e) {
-           e.preventDefault();
-           add_product();
-        });
-
-        $("#basket_button").bind("click", function(e) {
-           e.preventDefault();
-           $("body").load("/basket")
-        });
-
-        $("#close").bind("click", function(e) {
-            e.preventDefault();
-           $(".error_message").html('').hide();
-           $(".order-form").hide();
-           $(".shadow").hide();
-        })
 
     </script>
 </body>
