--- a/index.html
+++ b/index.html
@@ -33,9 +33,32 @@
     <i class="fa fa-refresh fa-5x fa-spin"></i>
     <div class="shadow"></div>
     <div class="container">
-        <div class="content">
+        <div class="content hidden">
         </div>
-        
+        <div class="intro">
+            <img src="/img/fastfood-worker-48-255355.png" class="pull-right">
+            <h3 class="app-title">iyabasira <span class="grey">delivery</span></h3>
+            <hr>
+            <p>Buy your meals from your preferred fast food and get it delivered wherever and whenever you want it as easy as 1-2-3:</p>
+            <ul>
+                <li>Select an item from the list and click <buton class="btn btn-xs btn-success">ORDER NOW</buton></li>
+                <li>Click on the <button class="btn btn-xs btn-danger">Basket</button> at the top of the page to checkout</li>
+                <li>Choose one of the delivery guys available in the same app</li>
+                <li>Rub your belly, the food is coming</li>
+            </ul>
+            <br/>
+            <p>
+            Now click <button type="button" class="btn btn-success btn-lg start" >Start</button>
+            </p>
+            <span class="bottom-message">Delivery service available in <span class="areas"></span> in Port Harcourt Only. Coming soon to other areas.</span>
+
+            <hr>
+            <p class="copyright">
+            The fast food brands and logos showed here are property of their respective companies.<br/>
+            <span class="iyabasira">iyabasira.online</span> (&copy;) 2017 - All rights reserved. 
+            </p>
+
+        </div>
     </div>
 
     <footer class="navbar navbar-fixed-bottom">
@@ -47,7 +70,7 @@
                 <a href="javascript:void(0)"><span class="glyphicon glyphicon glyphicon-fullscreen" data-toggle="tooltip" data-placement="top" title="Toggle full screen"></span></a>
             </li>
         </ul>
-
+        <img src="/img/comodo_secure_seal_76x26_transp.png" class="pull-right">
     </footer>
     <!-- Bootstrap core JavaScript ================================================== -->
     <!-- Placed at the end of the document so the pages load faster -->
@@ -58,7 +81,21 @@
 
     <script>
         $(document).ready(function() {
+            if(intro) {
+                $(".content").load(HOME);
+                $(".intro").addClass("hidden");
+                $(".content").removeClass("hidden");
+            } else {
+                get_areas();
+            }
+        });
+
+        $(".start").on("click", function(e){
+            e.preventDefault();
+            intro = true;
             $(".content").load(HOME);
+            $(".intro").addClass("hidden");
+            $(".content").removeClass("hidden");
         });
 
         $(".glyphicon-home").parent().bind("click", function() {
