Profile form submit setup

--- a/basket/index.html
+++ b/basket/index.html
@@ -7,7 +7,7 @@
         <h3 class="app-title">iyabasira <span class="grey">delivery</span></h3>
         <hr>
         <!-- The table area -->
-        <div class="alert alert-info alert-dismissible" role="alert">
+        <div class="alert alert-danger alert-dismissible" role="alert">
             <button type="button" class="close" data-dismiss="alert" aria-label="Close">
                 <span aria-hidden="true">&times;</span>
             </button>
