--- a/checkout/index.html
+++ b/checkout/index.html
@@ -9,39 +9,45 @@
                 <!-- Name -->
                 <div class="form-group">
                     <label for="name">Name:</label>
-                    <input class="form-control" id="name" name="name" type="text" placeholder="Enter your name">
+                    <input class="form-control" id="name" type="text" placeholder="Enter your name">
                 </div>
 
                 <!-- Mobile -->
                 <div class="form-group">
                     <label for="mobile">Mobile:</label>
-                    <input class="form-control" id="mobile" name="mobile" type="text" placeholder="Enter your mobile number">
+                    <input class="form-control" id="mobile" type="text" placeholder="Enter your mobile number">
                 </div>
 
                 <!-- Email -->
                 <div class="form-group">
                     <label for="email">Email:</label>
-                    <input class="form-control" id="email" name="email" type="email" placeholder="Enter your email address">
+                    <input class="form-control" id="email" type="email" placeholder="Enter your email address">
                     <small id="emailHelp" class="form-text text-muted">We'll never share your email with anyone else.</small>
+                </div>
+
+                <!-- Password -->
+                <div class="form-group">
+                    <label for="password">Password:</label>
+                    <input class="form-control" id="password" type="password" placeholder="Enter your password">
                 </div>
 
                 <!-- Address -->
                 <div class="form-group">
                     <label for="address">Address:</label>
-                    <textarea class="form-control" rows="5" id="address" name="address" placeholder="Enter address for delivery"></textarea>
+                    <textarea class="form-control" rows="5" id="address" placeholder="Enter address for delivery"></textarea>
                 </div>
 
                 <!-- Area -->
                 <div class="form-group">
                     <label for="area_id">Area:</label>
-                    <select class="form-control selectpicker areas" data-live-search="true" id="area_id" name="area_id" data-size="5" data-header="Choose your area">
+                    <select class="form-control selectpicker areas" data-live-search="true" id="area_id" data-size="5" data-header="Choose your area">
                     </select>
                 </div>
 
                 <!-- City -->
                 <div class="form-group">
-                    <label class="form-control" for="city_id">City:</label>
-                    <select class="form-control selectpicker cities" data-live-search="true" id="city_id" name="city_id" data-size="5" data-header="Choose your city">
+                    <label for="city_id">City:</label>
+                    <select class="form-control selectpicker cities" data-live-search="true" id="city_id" data-size="5" data-header="Choose your city">
                     </select>
                 </div>
 
@@ -58,6 +64,7 @@
                         <button type="button" class="btn btn-success btn-lg pull-right" id="submit-form">Submit Info</button>
                     </div>
                 </div>
+
             </form>
         </div>
     </div>
@@ -80,4 +87,5 @@
         d.preventDefault();
         submitForm("profile");
     });
+
 </script>
