--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
     <i class="fa fa-refresh fa-5x fa-spin"></i>
     <div class="shadow"></div>
     <div class="container">
-        <div id="content" class="content-fluid hidden">
+        <div id="content" class="content hidden">
         </div>
         <div class="intro" id="intro">
             <img src="/img/fastfood-worker-48-255355.png" class="pull-right">
