Upgrade basket form

--- a/checkout/index.html
+++ b/checkout/index.html
@@ -38,12 +38,13 @@
                 </div>
 
                 <!-- Area -->
+                <!--
                 <div class="form-group">
                     <label for="area_id">Area:</label>
                     <select class="form-control selectpicker areas" data-live-search="true" id="area_id" data-size="5" data-header="Choose your area">
                     </select>
                 </div>
-
+                -->
                 <!-- City -->
                 <div class="form-group">
                     <label for="city_id">City:</label>
@@ -74,7 +75,7 @@
 
     $(document).ready(function() {
         $(".alert").hide();
-        load_dropdown("areas");
+        //load_dropdown("areas");
         load_dropdown("cities");
     });
 
