Setting geolocation updates for shops

--- a/checkout/index.html
+++ b/checkout/index.html
@@ -61,7 +61,7 @@
                         <span id="msg"></span>
                     </div>
                     <div>
-                        <button type="reset" class="btn btn-danger btn-lg" id="cancel-action">Cancel Order</button>
+                        <button type="reset" class="btn btn-danger btn-lg" id="cancel-action">Go Back</button>
                         <button type="button" class="btn btn-success btn-lg pull-right" id="submit-form">Submit Info</button>
                     </div>
                 </div>
