--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <!-- The above 3 meta tags *must* come first in the head;any other head content must come *after* these tags -->
+    <meta name="google-site-verification" content="rUQGy7uVvtoqDq5FR3OHW81IMFQl-hDLQtvD7ccokX0" />
     <meta name="description" content="iyabasira - a new way to shop for Naija">
     <meta name="author" content="www.escng.com">
     <link rel="icon" href="/img/favicon.ico">
@@ -25,6 +26,20 @@
             display: none;
         }
     </style>
+    <script type="application/ld+json">
+        {
+            "@context": "http://schema.org",
+            "@type": "Organization",
+            "url": "https://iyabasira.online",
+            "description": "iyabasira - a new way to shop for Naija",          
+            "contactPoint": [{
+                "@type": "ContactPoint",
+                "telephone": "+54-291-575-4922",
+                "author": "Omar Melendrez",
+                "contactType": "customer service"
+            }]
+        }
+    </script>
 </head>
 
 <body>
