--- a/admin/index.html
+++ b/admin/index.html
@@ -7,9 +7,10 @@
         <!-- The above 3 meta tags *must* come first in the head; any other head content must come *after* these tags -->
         <meta name="description" content="">
         <meta name="author" content="">
-        <title>Navbar Template for Bootstrap</title>
+        <title>iyabasira - Admin</title>
         <!-- Bootstrap core CSS -->
         <link href="/libs/bootstrap/css/bootstrap.min.css" rel="stylesheet">
+        <link href="/libs/bootstrap/css/bootstrap-select.min.css" rel="stylesheet">
         <!-- IE10 viewport hack for Surface/desktop Windows 8 bug -->
         <link href="/libs/bootstrap/css/ie10-viewport-bug-workaround.css" rel="stylesheet">
         <!-- Custom styles for this template -->
@@ -22,6 +23,7 @@
         <script src="https://oss.maxcdn.com/html5shiv/3.7.3/html5shiv.min.js"></script>
         <script src="https://oss.maxcdn.com/respond/1.4.2/respond.min.js"></script>
         <![endif]-->
+        <link href="/css/global.min.css" rel="stylesheet">
         <style type="text/css">
             @font-face {
                 font-family: 'Roboto';
@@ -29,15 +31,21 @@
             }
             body {
                 color: #888;
+                background-color: #fff;
                 font-family: 'Roboto', 'Segoe UI', 'Lucida Grande', 'Ubuntu', sans-serif;
             }
             .jumbotron {
                 color: #000;
             }
+            .main {
+                font-weight: normal;
+            }
         </style>
     </head>
     <body>
+        <!-- Loading spin image -->
         <div class="container">
+            <i class="fa fa-refresh fa-5x fa-spin"></i>
             <!-- Static navbar -->
             <nav class="navbar navbar-default" role="navigation">
                 <div class="container-fluid">
@@ -48,28 +56,38 @@
                         <span class="icon-bar"></span>
                         <span class="icon-bar"></span>
                         </button>
-                        <a class="navbar-brand" href="#">Admin</a>
+                        <a class="navbar-brand" href="javascript:void(0)">Admin</a>
                     </div>
                     <div id="navbar" class="navbar-collapse collapse">
                         <ul class="nav navbar-nav">
-                            <li class="active"><a href="#">Home</a></li>
-                            <li><a href="#">Orders</a></li>
-                            <li><a href="#">Delivery guys</a></li>
-                            <li><a href="#">Customers</a></li>
-                            <li><a href="#">Map</a></li>
+                            <li class="active"><a href="/admin">Home</a></li>
+                            <li><a href="javascript:void(0)" onclick="load('orders')">Orders</a></li>
+                            <li><a href="javascript:void(0)" onclick="load('customers')">Customers</a></li>
+                            <li><a href="javascript:void(0)" onclick="load('map')">Map</a></li>
                         </ul>
                         <ul class="nav navbar-nav navbar-right">
                             <li class="dropdown">
-                                <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Products <span class="caret"></span></a>
+                                <a href="javascript:void(0)" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Admin <span class="caret"></span></a>
                                 <ul class="dropdown-menu">
-                                    <li><a href="#">Categories</a></li>
-                                    <li><a href="#">Proucts</a></li>
-                                    <li><a href="#">Shop -> Product</a></li>
+                                    <li role="separator" class="divider"></li>
+                                    <li class="dropdown-header">Products</li>
+                                    <li><a href="javascript:void(0)" onclick="load('categories')">Categories</a></li>
+                                    <li><a href="javascript:void(0)" onclick="load('products')">Products</a></li>
+                                    <li><a href="javascript:void(0)" onclick="load('shop_product')">Shop -> Product</a></li>
                                     <li role="separator" class="divider"></li>
                                     <li class="dropdown-header">Prices</li>
-                                    <li><a href="#">Product prices</a></li>
                                     <li><a href="#">Delivery rates</a></li>
                                     <li><a href="#">Orders fee</a></li>
+                                    <li role="separator" class="divider"></li>
+                                    <li class="dropdown-header">Entities</li>
+                                    <li><a href="javascript:void(0)" onclick="load('shops')">Shops</a></li>
+                                    <li><a href="javascript:void(0)" onclick="load('shops_areas')">Shops -> Areas</a></li>
+                                    <li><a href="#">Areas</a></li>
+                                    <li><a href="#">Cities</a></li>
+                                    <li><a href="#">Shop types</a></li>
+                                    <li role="separator" class="divider"></li>
+                                    <li class="dropdown-header">Delivery</li>
+                                    <li><a href="javascript:void(0)">Delivery guys</a></li>
                                 </ul>
                             </li>
                             <li><a href="#">Config</a></li>
@@ -78,21 +96,29 @@
                 </div><!--/.container-fluid -->
             </nav>
             <!-- Main component for a primary marketing message or call to action -->
-            <div class="jumbotron">
-                <h1>Admin area</h1>
-                <p>This area is where iyabasira is managed</p>
-                <p>
-                    <a class="btn btn-primary" href="/" role="button">Go to iyabasira.online &raquo;</a>
-                </p>
+            <div class="master-container">
+                <div class="jumbotron">
+                    <h1>Admin area</h1>
+                    <p>This area is where iyabasira is managed</p>
+                    <p>
+                        <a class="btn btn-primary" href="/" role="button">Go to iyabasira.online &raquo;</a>
+                    </p>
+                </div>
             </div>
         </div> <!-- /container -->
         <!-- Bootstrap core JavaScript
         ================================================== -->
         <!-- Placed at the end of the document so the pages load faster -->
         <script src="/libs/jquery/js/jquery.min.js"></script>
-        <script>window.jQuery || document.write('<script src="../../assets/js/vendor/jquery.min.js"><\/script>')</script>
         <script src="/libs/bootstrap/js/bootstrap.min.js"></script>
+        <script src="/libs/bootstrap/js/bootstrap-select.min.js"></script>
         <!-- IE10 viewport hack for Surface/desktop Windows 8 bug -->
         <script src="/libs/bootstrap/js/ie10-viewport-bug-workaround.js"></script>
+        <script src="/js/global.min.js"></script>
+        <script>
+            load = function(folder) {
+                $('.master-container').load(folder)
+            }
+        </script>
     </body>
 </html>
