--- a/admin/index.html
+++ b/admin/index.html
@@ -67,7 +67,7 @@
                         </ul>
                         <ul class="nav navbar-nav navbar-right">
                             <li class="dropdown">
-                                <a href="javascript:void(0)" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Admin <span class="caret"></span></a>
+                                <a href="javascript:void(0)" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Tables <span class="caret"></span></a>
                                 <ul class="dropdown-menu">
                                     <li role="separator" class="divider"></li>
                                     <li class="dropdown-header">Products</li>
@@ -76,21 +76,20 @@
                                     <li><a href="javascript:void(0)" onclick="load('shop_product')">Shop -> Product</a></li>
                                     <li role="separator" class="divider"></li>
                                     <li class="dropdown-header">Prices</li>
-                                    <li><a href="#">Delivery rates</a></li>
-                                    <li><a href="#">Orders fee</a></li>
+                                    <li><a href="javascript:void(0)" onclick="load('delivery_rates')">Delivery rates</a></li>
+                                    <li><a href="javascript:void(0)" onclick="load('orders_fees')">Orders fees</a></li>
                                     <li role="separator" class="divider"></li>
                                     <li class="dropdown-header">Entities</li>
                                     <li><a href="javascript:void(0)" onclick="load('shops')">Shops</a></li>
                                     <li><a href="javascript:void(0)" onclick="load('shops_areas')">Shops -> Areas</a></li>
-                                    <li><a href="#">Areas</a></li>
-                                    <li><a href="#">Cities</a></li>
-                                    <li><a href="#">Shop types</a></li>
+                                    <li><a href="javascript:void(0)" onclick="load('areas')">Areas</a></li>
+                                    <li><a href="javascript:void(0)" onclick="load('cities')">Cities</a></li>
+                                    <li><a href="javascript:void(0)" onclick="load('shop_types')">Shop types</a></li>
                                     <li role="separator" class="divider"></li>
                                     <li class="dropdown-header">Delivery</li>
-                                    <li><a href="javascript:void(0)">Delivery guys</a></li>
+                                    <li><a href="javascript:void(0)" onclick="load('deliverers')">Delivery guys</a></li>
                                 </ul>
                             </li>
-                            <li><a href="#">Config</a></li>
                         </ul>
                     </div><!--/.nav-collapse -->
                 </div><!--/.container-fluid -->
