Format forms and login page

--- a/admin/index.html
+++ b/admin/index.html
@@ -45,7 +45,7 @@
     </head>
     <body>
         <!-- Loading spin image -->
-        <div class="container">
+        <div class="container-fluid">
             <i class="fa fa-refresh fa-5x fa-spin"></i>
             <!-- Static navbar -->
             <nav class="navbar navbar-default hidden" role="navigation">
