--- a/admin/login/index.html
+++ b/admin/login/index.html
@@ -41,7 +41,7 @@
     }
 
     img.avatar {
-        width: 40%;
+        width: 20%;
         border-radius: 50%;
     }
 
@@ -50,7 +50,7 @@
         max-width: 90%;
     }
 
-    span.psw {
+    span.password {
         float: right;
         padding-top: 16px;
     }
@@ -75,7 +75,6 @@
         /* Fallback color */
         background-color: rgba(0, 0, 0, 0.4);
         /* Black w/ opacity */
-        padding-top: 60px;
     }
     /* Modal Content/Box */
 
@@ -84,7 +83,7 @@
         margin: 5% auto 15% auto;
         /* 5% from the top, 15% from the bottom and centered */
         border: 1px solid #888;
-        width: 30%;
+        width: 80%;
         /* Could be more or less, depending on screen size */
     }
     /* The Close Button (x) */
