Fix styles for admin

--- a/index.html
+++ b/index.html
@@ -126,7 +126,7 @@
         });
 
         $(".glyphicon-home").parent().on("click", function() {
-            $("#content").load(HOME);
+            $("#content").load("/");
         });
 
         $(".glyphicon-fullscreen").parent().on("click", function() {
