--- a/admin/index.html
+++ b/admin/index.html
@@ -107,7 +107,8 @@
         <script src="/libs/bootstrap/js/bootstrap-select.min.js"></script>
         <!-- IE10 viewport hack for Surface/desktop Windows 8 bug -->
         <script src="/libs/bootstrap/js/ie10-viewport-bug-workaround.js"></script>
-        <script src="/js/global.min.js"></script>
+        <script src="/js/admin.min.js"></script>
+        <script src="/js/maps.min.js"></script>
         <script>
             $(document).ready(function() {
                 $(".alert").hide();
