--- a/index.html
+++ b/index.html
@@ -100,6 +100,7 @@
     <script src="/libs/bootstrap/js/bootstrap.min.js"></script>
     <script src="/libs/bootstrap/js/bootstrap-select.min.js"></script>
     <script src="/js/global.min.js"></script>
+    <script src="/js/maps.min.js"></script>
 
     <script>
         $(document).ready(function() {
